test/files/pos/t7551/A_1.java
package p;

import java.lang.annotation.Retention;
import java.lang.annotation.RetentionPolicy;

@Retention(RetentionPolicy.RUNTIME)
public @interface A_1 {
    Class<?> subInterface();
}
